--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
 # This file is a placeholder for environment variables required to run this project.
-# Currently, there are no environment variables needed.
 
-# Example of what future variables might look like:
-# NEXT_PUBLIC_API_KEY=your_api_key_here
-# DATABASE_URL=your_database_url_here
-# SECRET_KEY=your_secret_key_here
-
-# Password for protected pages/routes
+# Password for protected pages/routes (legacy RouteGuard)
 PAGE_ACCESS_PASSWORD=password
+
+# NextAuth.js Configuration
+# Generate a secret with: openssl rand -base64 32
+AUTH_SECRET=your_auth_secret_here
+
+# Google OAuth Provider
+# Create credentials at: https://console.cloud.google.com/apis/credentials
+AUTH_GOOGLE_ID=your_google_client_id
+AUTH_GOOGLE_SECRET=your_google_client_secret
+
+# Admin Access Control
+# Comma-separated list of email addresses allowed to access /admin
+ADMIN_EMAILS=admin@example.com,another@example.com
