--- a/package.json
+++ b/package.json
@@ -13,17 +13,28 @@
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^16.0.10",
     "@once-ui-system/core": "^1.5.6",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/postcss": "^4.1.18",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "gray-matter": "^4.0.3",
     "lint-staged": "^16.1.5",
+    "lucide-react": "^0.562.0",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "next-mdx-remote": "^5.0.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "sass": "^1.86.3",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "transliteration": "^2.3.5"
   },
   "devDependencies": {
@@ -33,6 +44,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.5",
     "eslint": "^9.25.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.8.3",
     "tzdata": "^1.0.44"
   }
