--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ AUTH_GOOGLE_SECRET=your_google_client_secret
 # Admin Access Control
 # Comma-separated list of email addresses allowed to access /admin
 ADMIN_EMAILS=admin@example.com,another@example.com
+
+# Database (PostgreSQL via Docker)
+# Start PostgreSQL with: docker-compose up -d
+DATABASE_URL="postgresql://portfolio_user:portfolio_password@localhost:5432/magic_portfolio?schema=public"
