--- a/package.json
+++ b/package.json
@@ -7,7 +7,22 @@
     "build": "next build",
     "biome-write": "npx @biomejs/biome format --write .",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:start": "docker-compose up -d",
+    "db:stop": "docker-compose down",
+    "db:restart": "docker-compose restart",
+    "db:logs": "docker-compose logs -f postgres",
+    "db:reset": "docker-compose down -v && docker-compose up -d",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "prisma db seed",
+    "prisma:push": "prisma db push",
+    "setup": "npm run db:start && sleep 3 && npm run prisma:migrate && npm run prisma:seed"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
@@ -39,15 +54,18 @@
     "sass": "^1.86.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "transliteration": "^2.3.5"
+    "transliteration": "^2.3.5",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@prisma/client": "^6.19.1",
     "@types/cookie": "^0.6.0",
     "@types/node": "^20.17.30",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.5",
     "eslint": "^9.25.0",
+    "prisma": "^6.19.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.8.3",
     "tzdata": "^1.0.44"
